# terse-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
terse/: __init__.py  core.py
tests/: test_terse.py
